--- a/week3/README.html
+++ b/week3/README.html
@@ -238,6 +238,74 @@ $(document).ready(function () {
 <p><strong>OR</strong></p>
 <p>You can teach your computer to do the same thing using R:</p>
 <pre class="r"><code>download.file(&quot;http://archive.ics.uci.edu/ml/machine-learning-databases/00275/Bike-Sharing-Dataset.zip&quot;, &quot;ProjectData/Bike-Sharing-Dataset.zip&quot;)</code></pre>
+<p>Notice here that:</p>
+<ul>
+<li><p>The full URL to the dataset file is specified (no clicking through a series of links)</p></li>
+<li><p>The name of the file saved to your local computer is specified</p></li>
+<li><p>The directory in which file was saved is specified (“ProjectData”)</p></li>
+<li><p>Code can always be executed in R (as long as the link is available)</p></li>
+</ul>
+<blockquote>
+<p>DO: Use Some Version Control</p>
+</blockquote>
+<ul>
+<li><p>Slow things down</p></li>
+<li><p>Add changes in small chunks (don’t just do one massie commit)</p></li>
+<li><p>Track / tag snapshots; revert to old versions</p></li>
+<li><p>Software like Github / Bitbucket / SourceForge make it easy to publish results</p></li>
+</ul>
+<blockquote>
+<p>DO: Keep track of Your Software Environment</p>
+</blockquote>
+<ul>
+<li><p>If you work on a complex project involving many tools / datasets, the software and computing environment can be critical for reproducing your analysis.</p></li>
+<li><p><strong>Computer architecture</strong> - CPU (Intel, AMD, ARM), GPUs</p></li>
+<li><p><strong>Operating System</strong> - Windows, Linus / Unix, Mac OS</p></li>
+<li><p><strong>Software toolchain</strong> - Compilers, interpreters, command shell, programming languages (C, Perl, Python, etc.), database backends,, data analysis software</p></li>
+<li><p><strong>Supporting software / infrastructure</strong> - Libraries, R Packages, dependencies</p></li>
+<li><p><strong>External dependencies</strong> - Web sites, data repositories, remote database, software repositories</p></li>
+<li><p><strong>Version numbers</strong> - Ideally for everything (if available)</p></li>
+</ul>
+<pre class="r"><code>sessionInfo()</code></pre>
+<pre><code>## R version 3.3.2 (2016-10-31)
+## Platform: x86_64-w64-mingw32/x64 (64-bit)
+## Running under: Windows 10 x64 (build 14393)
+## 
+## locale:
+## [1] LC_COLLATE=English_United States.1252 
+## [2] LC_CTYPE=English_United States.1252   
+## [3] LC_MONETARY=English_United States.1252
+## [4] LC_NUMERIC=C                          
+## [5] LC_TIME=English_United States.1252    
+## 
+## attached base packages:
+## [1] stats     graphics  grDevices utils     datasets  methods   base     
+## 
+## loaded via a namespace (and not attached):
+##  [1] backports_1.0.5 magrittr_1.5    rprojroot_1.2   tools_3.3.2    
+##  [5] htmltools_0.3.5 yaml_2.1.14     Rcpp_0.12.9     stringi_1.1.2  
+##  [9] rmarkdown_1.3   knitr_1.15.1    stringr_1.2.0   digest_0.6.12  
+## [13] evaluate_0.10</code></pre>
+<blockquote>
+<p>DON’T: Save Output</p>
+</blockquote>
+<ul>
+<li><p>Avoid saving data analysis output (tables, figures, summaries, processed data, etc.), except perhaps temporarily for efficiency purposes</p></li>
+<li><p>If a stray output file cannot be easily connected with the means by which it was created, then it is not reproducible</p></li>
+<li><p>Save the data + code that generated the output, rather than the output itself</p></li>
+<li><p>Intermediate files are okay as long as there is clear documentation of how they were created</p></li>
+</ul>
+<blockquote>
+<p>DO: Set Your Seed</p>
+</blockquote>
+<ul>
+<li><p>Random number generators generate pseudo-random numbers based on an initial seed (usually a number of set of numbers)</p></li>
+<li><ul>
+<li>In R you can use the <strong>set.seed()</strong> function to set the seed and to specify the random number generator to use</li>
+</ul></li>
+<li><p>Setting the seed allows for the stream of random numbers to be exactly reproducible</p></li>
+<li><p>Whenever you generate random numbers for a non-trivial purpose, <strong>always set the seed</strong></p></li>
+</ul>
 </div>
 
 
