--- a/week3/README.html
+++ b/week3/README.html
@@ -402,6 +402,55 @@ $(document).ready(function () {
 <li><p>Assumes everyone plays by the same rules and want to achieve the same goals (i.e., scientific discovery)</p></li>
 </ul>
 </div>
+<div id="who-reproduces-research" class="section level2">
+<h2>Who Reproduces Research?</h2>
+<ul>
+<li><p>For reproducibility to be effective as a means to check validity, someone needs to do something</p></li>
+<li><p>Re-run the analysis; check results match</p></li>
+<li><p>Check the code for bugs/errors</p></li>
+<li><p>Try alternate approaches; check sensitivity</p></li>
+<li><p>The need for someone to do something is inherited from traditional notion of replication</p></li>
+<li><p>Who is “someone” and what are their goals?</p></li>
+</ul>
+</div>
+<div id="the-story-so-far" class="section level2">
+<h2>The Story So Far</h2>
+<ul>
+<li><p>Reproducibility brings transparency (wrt code+data) and increased transfer of knowledge</p></li>
+<li><p>A lot of discussion about how to get people to share data</p></li>
+<li><p>Key question of “can we trust this analysis?” is not addressed by reproducibility</p></li>
+<li><p>Reproducibility addresses potential problems long after they’ve occurred (“downstream”)</p></li>
+<li><p>Secondary analyses are inevitably coloured by the interests / motivations of others</p></li>
+</ul>
+</div>
+<div id="evidence-based-data-analysis-1" class="section level2">
+<h2>Evidence-based Data Analysis</h2>
+<ul>
+<li><p>Most data analyses involve stringing together many different tools and methods</p></li>
+<li><p>Some methods may be standard for a given field, but others are often applied ad hoc</p></li>
+<li><p>We should apply thoroughly studied (via statistical research), mutually agreed upon methods to analyze data whenever possible</p></li>
+<li><p>There should be evidence to justify the application of a given method</p></li>
+</ul>
+<hr />
+<ul>
+<li><p>Create analytic pipelines from evidence-based component - standarize it</p></li>
+<li><p>A Deterministic Statistical Machine - <a href="http://goo.gl/Qvlhuv" class="uri">http://goo.gl/Qvlhuv</a></p></li>
+<li><p>Once an evidence-based analytic pipeline is establised, we shouldn’t mess with it</p></li>
+<li><p>Analysis with a “transparent box”</p></li>
+<li><p>Reduce the “researcher degrees of freedom”</p></li>
+<li><p>Analogous to pre-specified clinical trial protocol</p></li>
+</ul>
+<blockquote>
+<p>Deterministic Statistical Model</p>
+</blockquote>
+<p><strong>Dataset and Input Metadata -&gt; Preprocessing -&gt; Model Selection -&gt; Sensitivity Analysis -&gt; Report and Output parameters</strong></p>
+<ul>
+<li>Benchmark Dataset -&gt; Preprocessing</li>
+<li>Benchmark Dataset -&gt; Model Selection</li>
+<li><p>Benchmark Dataset -&gt; Sensitivity Analysis</p></li>
+<li><p>Report -&gt; Method Section or Public Repository</p></li>
+</ul>
+</div>
 
 
 
